bin_PROGRAMS=bin/problem_1.out bin/problem_2.out bin/problem_3.out bin/problem_4.out bin/problem_5.out bin/problem_6.out bin/problem_7.out
bin_problem_1_out_SOURCES=problem_1.cpp
bin_problem_2_out_SOURCES=problem_2.cpp
bin_problem_3_out_SOURCES=problem_3.cpp
bin_problem_4_out_SOURCES=problem_4.cpp
bin_problem_5_out_SOURCES=problem_5.cpp
bin_problem_6_out_SOURCES=problem_6.cpp
bin_problem_7_out_SOURCES=problem_7.cpp
